--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-heading">Welcome To Temple's Bioinformatics Studio!</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Want to know more?</a>
       </div>
     </div>
@@ -240,15 +239,36 @@
                     <td>5-6pm</td>
                 </tr>
             </table>
-            <table style = 'float: right;'>
+            <table style = 'float: left;'>
               <tr>
                 <th>Available Tutorials</th>
               </tr>
               <tr>
-                <td>Intro to Python</td>
+                <td>Studio Bootstrap</td>
+              </tr>
+              <tr>
+                <td>Intro to Python: Variable Types</td>
+              </tr>
+              <tr>
+                <td>Intro to Python: Loops & Conditional Statements</td>
               </tr>
               <tr>
                 <td>PANDAS Introduction</td>
+              </tr>
+              <tr>
+                <td>Graphing: Matplotlib and Seaborn</td>
+              </tr>
+              <tr>
+                <td>Intro to Python: Variable Types</td>
+              </tr>
+              <tr>
+                <td>Input/Output</td>
+              </tr>
+              <tr>
+                <td>Introduction to Functions</td>
+              </tr>
+              <tr>
+                <td>Introduction to Libraries</td>
               </tr>
             </table>
             <a class="btn btn-primary btn-lg text-uppercase" href="https://drive.google.com/drive/u/1/folders/0AB9vccD6QEfPUk9PVA">Google Drive</a>
