--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a class="nav-link js-scroll-trigger" href="#team">Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="blogposts/blog.html">Blog</a>
+            <a class="nav-link js-scroll-trigger" href="#">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
