--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
   <!-- Twitter -->
   <section class="page-section">
     <div class="container">
-        <a class="twitter-timeline" data-height="350" data-theme="dark" href="https://twitter.com/TuBioinfostudio?ref_src=twsrc%5Etfw">Tweets by TuBioinfostudio</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <a class="twitter-timeline" data-theme="dark" href="https://twitter.com/TuBioinfostudio?ref_src=twsrc%5Etfw">Tweets by TuBioinfostudio</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
   </section>
 
