--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <img class="navbar-brand js-scroll-trigger" href="#page-top" src = "img/logo_web.png" alt = "">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Temple Bioinformatics Studio</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
