--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/fm.jpg" alt="">
             <h4>Francisco McGee</h4>
-            <p class="text-muted">Officer</p>
+            <p class="text-muted">Dojo Manager</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://github.com/alagauche">
@@ -330,7 +330,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/ap.jpg" alt="">
             <h4>Alyssa Pivirotto</h4>
-            <p class="text-muted">Officer</p>
+            <p class="text-muted">Training Manager</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://github.com/ampivirotto">
@@ -359,6 +359,44 @@
             </li>
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/alexander-lucaci-0b305743/">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="team-member">
+          <img class="mx-auto rounded-circle" src="img/team/wk.jpg" alt="">
+          <h4>Westin Kosater</h4>
+          <p class="text-muted">Social Media Manager</p>
+          <ul class="list-inline social-buttons">
+            <li class="list-inline-item">
+              <a href="https://github.com/wes-kosater">
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.linkedin.com/in/westin-kosater-290600104/">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="team-member">
+          <img class="mx-auto rounded-circle" src="img/team/ak.jpg" alt="">
+          <h4>Adam Karami</h4>
+          <p class="text-muted">Outreach Manager</p>
+          <ul class="list-inline social-buttons">
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.linkedin.com/in/adam-karami-69167195/">
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
