--- a/index.html
+++ b/index.html
@@ -346,61 +346,63 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4">
-        <div class="team-member">
-          <img class="mx-auto rounded-circle" src="img/team/al.jpg" alt="">
-          <h4>Alexander Lucaci</h4>
-          <p class="text-muted">Officer</p>
-          <ul class="list-inline social-buttons">
-            <li class="list-inline-item">
-              <a href="https://github.com/aglucaci">
-                <i class="fab fa-github"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/alexander-lucaci-0b305743/">
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-            </li>
-          </ul>
+      <div class = "row">
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/al.jpg" alt="">
+            <h4>Alexander Lucaci</h4>
+            <p class="text-muted">Officer</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://github.com/aglucaci">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/alexander-lucaci-0b305743/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="team-member">
-          <img class="mx-auto rounded-circle" src="img/team/wk.jpg" alt="">
-          <h4>Westin Kosater</h4>
-          <p class="text-muted">Social Media Manager</p>
-          <ul class="list-inline social-buttons">
-            <li class="list-inline-item">
-              <a href="https://github.com/wes-kosater">
-                <i class="fab fa-github"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/westin-kosater-290600104/">
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-            </li>
-          </ul>
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/wk.png" alt="">
+            <h4>Westin Kosater</h4>
+            <p class="text-muted">Social Media Manager</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://github.com/wes-kosater">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/westin-kosater-290600104/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="team-member">
-          <img class="mx-auto rounded-circle" src="img/team/ak.jpg" alt="">
-          <h4>Adam Karami</h4>
-          <p class="text-muted">Outreach Manager</p>
-          <ul class="list-inline social-buttons">
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-github"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/adam-karami-69167195/">
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-            </li>
-          </ul>
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/ak.jpg" alt="">
+            <h4>Adam Karami</h4>
+            <p class="text-muted">Outreach Manager</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="#">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/adam-karami-69167195/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
       <div class="row">
