--- a/index.html
+++ b/index.html
@@ -171,43 +171,43 @@
                 </tr>
                 <tr>
                   <td>9/4/19</td>
-                  <td>TBD</td>
-                  <td></td>
+                  <td> Open Coding Session </td>
+                  <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>9/11/19</td>
-                    <td>TBD</td>
-                    <td></td>
+                    <td> Childhood Cancer Data Lab</td>
+                    <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>9/18/19</td>
-                    <td>TBD</td>
-                    <td></td>
+                    <td>Open Coding Session</td>
+                    <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>9/25/19</td>
-                    <td>TBD</td>
-                    <td></td>
+                    <td>Open Coding Session </td>
+                    <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>10/2/19</td>
-                    <td>TBD</td>
-                    <td></td>
+                    <td>Open Coding Session </td>
+                    <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>10/9/19</td>
-                    <td>TBD</td>
-                    <td></td>
+                    <td>Open Coding Session</td>
+                    <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>10/16/19</td>
-                    <td>TBD</td>
-                    <td></td>
+                    <td>Open Coding Session</td>
+                    <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>10/23/19</td>
-                    <td>TBD</td>
-                    <td></td>
+                    <td>Open Coding Session</td>
+                    <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>10/30/19</td>
@@ -216,18 +216,18 @@
                 </tr>
                 <tr>
                     <td>11/6/19</td>
-                    <td>TBD</td>
-                    <td></td>
+                    <td>Open Coding Session</td>
+                    <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>11/13/19</td>
-                    <td>TBD</td>
-                    <td></td>
+                    <td>Open Coding Session</td>
+                    <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>11/20/19</td>
-                    <td>TBD</td>
-                    <td></td>
+                    <td>Open Coding Session</td>
+                    <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>11/27/19</td>
