--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/jz.jpg" alt="">
             <h4>Jordan Zehr</h4>
-            <p class="text-muted">Officer</p>
+            <p class="text-muted">Project Manager</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://github.com/jzehr">
@@ -351,7 +351,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/al.jpg" alt="">
             <h4>Alexander Lucaci</h4>
-            <p class="text-muted">Officer</p>
+            <p class="text-muted">Business Affairs Manager</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://github.com/aglucaci">
@@ -410,6 +410,32 @@
           <p class="large text-muted">We're currently looking for several officers and a webmaster.  Contact us if interested!  </p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Faculty Advisor</h2>
+        </div>
+      </div>
+      <div class="row">
+          <div class="col-sm-4 text-center"></div>
+        <div class="col-sm-4 text-center">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/rk.jpg" alt="">
+            <h4>Rob Kulathinal</h4>
+            <p class="text-muted">robkulathinal@temple.edu</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://www.cst.temple.edu/~robie/bioinform/index.html">
+                  <i class="fab fa-hubspot"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/rob-kulathinal-9882083/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
     </div>
   </section>
 
