--- a/index.html
+++ b/index.html
@@ -171,71 +171,71 @@
                 </tr>
                 <tr>
                   <td>9/4/19</td>
-                  <td> Open Coding Session </td>
-                  <td>5-7PM</td>
+                  <td> Github Tutorial </td>
+                  <td>5-6PM</td>
                 </tr>
                 <tr>
-                    <td>9/11/19</td>
-                    <td> Childhood Cancer Data Lab</td>
-                    <td>5-7PM</td>
+                    <td>9/13/19</td>
+                    <td> Open Coding Session </td>
+                    <td>5-6PM</td>
                 </tr>
                 <tr>
-                    <td>9/18/19</td>
+                    <td>9/20/19</td>
                     <td>Open Coding Session</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
-                    <td>9/25/19</td>
+                    <td>9/27/19</td>
                     <td>Open Coding Session </td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
-                    <td>10/2/19</td>
+                    <td>10/4/19</td>
                     <td>Open Coding Session </td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
-                    <td>10/9/19</td>
+                    <td>10/11/19</td>
                     <td>Open Coding Session</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
-                    <td>10/16/19</td>
+                    <td>10/18/19</td>
                     <td>Open Coding Session</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
-                    <td>10/23/19</td>
+                    <td>10/25/19</td>
                     <td>Open Coding Session</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
-                    <td>10/30/19</td>
+                    <td>11/1/19</td>
                     <td>Happy Halloween!</td>
                     <td>5-6pm</td>
                 </tr>
                 <tr>
-                    <td>11/6/19</td>
+                    <td>11/8/19</td>
                     <td>Open Coding Session</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
-                    <td>11/13/19</td>
+                    <td>11/15/19</td>
                     <td>Open Coding Session</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
-                    <td>11/20/19</td>
+                    <td>11/22/19</td>
                     <td>Open Coding Session</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
-                    <td>11/27/19</td>
+                    <td>11/29/19</td>
                     <td>No session!  Happy Thanksgiving!</td>
                     <td></td>
                 </tr>
                 <tr>
-                    <td>12/4/19</td>
+                    <td>12/6/19</td>
                     <td>Last Session! Pizza will be supplied!</td>
                     <td>5-6pm</td>
                 </tr>
