HK Connect Form test

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
   </section>
 
   <!-- Team -->
-  <section class="bg-light page-section" id="team">
+  <section class="bg-light page-sfection" id="team">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -522,6 +522,20 @@
       </div>
     </div>
   </section>
+
+<!-- Hannah Kim Contact Form via formspree -->
+<!-- https://github.com/BlackrockDigital/startbootstrap-agency/issues/136 -->
+<!-- https://stackoverflow.com/questions/24348223/send-email-from-static-page-hosted-on-github-pages/24348250#24348250 -->
+<!-- https://webdesign.tutsplus.com/tutorials/  quick-tip-add-a-formspree-form-to-your-static-sites--cms-23870 -->
+<form id="contactform" action="http://formspree.io/hannah.kim0007@temple.edu" method="POST">
+    <input type="text" name="name" placeholder="Your name">
+    <input type="email" name="_replyto" placeholder="Your email">
+    <input type="hidden" name="_subject" value="Website contact" />
+    <textarea name="body" placeholder="Your message"></textarea>
+    <input type="text" name="_gotcha" style="display:none" />
+    <input type="submit" value="Send">
+</form>
+
 
   <!-- Footer -->
   <footer class="footer">
