--- a/index.html
+++ b/index.html
@@ -528,10 +528,11 @@
 <!-- https://github.com/BlackrockDigital/startbootstrap-agency/issues/136 -->
 <!-- https://stackoverflow.com/questions/24348223/send-email-from-static-page-hosted-on-github-pages/24348250#24348250 -->
 <!-- https://webdesign.tutsplus.com/tutorials/  quick-tip-add-a-formspree-form-to-your-static-sites--cms-23870 -->
-<form id="contactform" action="http://formspree.io/hannah.kim0007@temple.edu" method="POST">
+<!-- https://medium.com/@asjas/using-formspree-io-on-your-github-pages-a60c290d1ee -->
+<form id="input" method="POST" action="http://formspree.io/hk.garnet@gmail.com">
     <input type="text" name="name" placeholder="Your name">
     <input type="email" name="_replyto" placeholder="Your email">
-    <input type="hidden" name="_subject" value="Website contact" />
+    <input type="hidden" name="_subject" value="TuBioinfostudio contact" />
     <textarea name="body" placeholder="Your message"></textarea>
     <input type="text" name="_gotcha" style="display:none" />
     <input type="submit" value="Send">
