--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
     </div>
   </section>
 
-  <!-- Contact -->
+  <!-- Contact
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row">
@@ -521,7 +521,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 <!-- Testing it out... 2 -->
 <!-- Hannah Kim Contact Form via formspree -->
@@ -530,10 +530,10 @@
 <!-- https://webdesign.tutsplus.com/tutorials/  quick-tip-add-a-formspree-form-to-your-static-sites--cms-23870 -->
 <!-- https://medium.com/@asjas/using-formspree-io-on-your-github-pages-a60c290d1ee -->
 <!-- https://help.formspree.io/hc/en-us/articles/115008227147--Unable-to-submit-form-error- -->
-<form id="input" method="POST" action="https://formspree.io/hk.garnet@gmail.com">
+<form id="input" method="POST" action="https://formspree.io/tubioinfostudio@gmail.com">
     <input type="text" name="name" placeholder="Your name">
     <input type="email" name="_replyto" placeholder="Your email">
-    <input type="hidden" name="_subject" value="TuBioinfostudio contact" />
+    <input type="hidden" name="_subject" value="From TUBioinfoStudio Contact Form" />
     <textarea name="body" placeholder="Your message"></textarea>
     <input type="text" name="_gotcha" style="display:none" />
     <input type="submit" value="Send">
