--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 <!-- https://webdesign.tutsplus.com/tutorials/  quick-tip-add-a-formspree-form-to-your-static-sites--cms-23870 -->
 <!-- https://medium.com/@asjas/using-formspree-io-on-your-github-pages-a60c290d1ee -->
 <!-- https://help.formspree.io/hc/en-us/articles/115008227147--Unable-to-submit-form-error- -->
-<form id="input" method="POST" action="https://formspree.io/hk.garnet@gmail.com">
+<form id="input" method="POST" action="https://formspree.io/tubioinfostudio@gmail.com">
     <input type="text" name="name" placeholder="Your name">
     <input type="email" name="_replyto" placeholder="Your email">
     <input type="hidden" name="_subject" value="TuBioinfostudio contact" />
