--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
     </div>
   </section>
 
-  <!-- Contact -->
+<!-- Contact
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row">
@@ -521,7 +521,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 <!-- Testing it out... 2 -->
 <!-- Hannah Kim Contact Form via formspree -->
