--- a/index.html
+++ b/index.html
@@ -482,49 +482,8 @@
     </div>
   </section>
 
-<!-- Contact
-  <section class="page-section" id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
-          <h3 class="section-subheading text-muted">We'll get back to you ASAP! </h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <form id="contactForm" name="sentMessage" novalidate="novalidate">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="clearfix"></div>
-              <div class="col-lg-12 text-center">
-                <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
-<!-- Testing it out... 2 -->
-<!-- Hannah Kim Contact Form via formspree -->
+<!-- Contact -->
+<!-- Contact Form via formspree -->
 <!-- https://github.com/BlackrockDigital/startbootstrap-agency/issues/136 -->
 <!-- https://stackoverflow.com/questions/24348223/send-email-from-static-page-hosted-on-github-pages/24348250#24348250 -->
 <!-- https://webdesign.tutsplus.com/tutorials/  quick-tip-add-a-formspree-form-to-your-static-sites--cms-23870 -->
