--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
     <input type="text" name="name" placeholder="Your name">
     <input type="email" name="_replyto" placeholder="Your email">
     <input type="hidden" name="_subject" value="TuBioinfostudio contact" />
-    <textarea name="body" placeholder="Your message"></textarea>
+    <textarea name="body" placeholder="If you want to leave us a message, please send it here!"></textarea>
     <input type="text" name="_gotcha" style="display:none" />
     <input type="submit" value="Send">
 </form>
