Updates and Improvements
Added Speaker, Trying to make

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 </tr>
                 <tr>
                     <td>10/11/19</td>
-                    <td>Open Coding Session</td>
+                    <td>Sentieon (https://www.sentieon.com/) on Precision Medicine Variant Calling</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
@@ -212,7 +212,7 @@
                 <tr>
                     <td>11/1/19</td>
                     <td>Happy Halloween!</td>
-                    <td>5-6pm</td>
+                    <td>5-6PM</td>
                 </tr>
                 <tr>
                     <td>11/8/19</td>
@@ -237,7 +237,7 @@
                 <tr>
                     <td>12/6/19</td>
                     <td>Last Session! Pizza will be supplied!</td>
-                    <td>5-6pm</td>
+                    <td>5-6PM</td>
                 </tr>
             </table>
             <table style = 'float: left;'>
@@ -483,21 +483,24 @@
   </section>
 
 <!-- Contact -->
-<!-- Contact Form via formspree -->
-<!-- https://github.com/BlackrockDigital/startbootstrap-agency/issues/136 -->
-<!-- https://stackoverflow.com/questions/24348223/send-email-from-static-page-hosted-on-github-pages/24348250#24348250 -->
-<!-- https://webdesign.tutsplus.com/tutorials/  quick-tip-add-a-formspree-form-to-your-static-sites--cms-23870 -->
-<!-- https://medium.com/@asjas/using-formspree-io-on-your-github-pages-a60c290d1ee -->
-<!-- https://help.formspree.io/hc/en-us/articles/115008227147--Unable-to-submit-form-error- -->
-<form id="input" method="POST" action="https://formspree.io/tubioinfostudio@gmail.com">
-    <input type="text" name="name" placeholder="Your name">
-    <input type="email" name="_replyto" placeholder="Your email">
-    <input type="hidden" name="_subject" value="TuBioinfostudio contact" />
-    <textarea name="body" placeholder="If you want to leave us a message, please send it here!"></textarea>
-    <input type="text" name="_gotcha" style="display:none" />
-    <input type="submit" value="Send">
-</form>
-
+<section class="page-section" id="contact">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading text-uppercase">Contact Us</h2>
+        <h3 class="section-subheading text-muted">We'll get back to you ASAP! </h3>
+      </div>
+    </div>
+    <form id="input" method="POST" action="https://formspree.io/tubioinfostudio@gmail.com">
+      <input type="text" name="name" placeholder="Your name">
+      <input type="email" name="_replyto" placeholder="Your email">
+      <input type="hidden" name="_subject" value="TuBioinfostudio contact" />
+      <textarea name="body" placeholder="If you want to leave us a message, please send it here!"></textarea>
+      <input type="text" name="_gotcha" style="display:none" />
+      <input type="submit" value="Send">
+    </form>
+  </div>
+ </section>
 
   <!-- Footer -->
   <footer class="footer">
