--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 </tr>
                 <tr>
                     <td>10/11/19</td>
-                    <td>Sentieon (https://www.sentieon.com/) on Precision Medicine Variant Calling</td>
+                    <td>Sentieon (https://www.sentieon.com/) \n on Precision Medicine Variant Calling</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
