--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 </tr>
                 <tr>
                     <td>10/11/19</td>
-                    <td>Sentieon (https://www.sentieon.com/) \n on Precision Medicine Variant Calling</td>
+                    <td>Sentieon (www.sentieon.com) on Precision Medicine Variant Calling</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
@@ -495,7 +495,7 @@
       <input type="text" name="name" placeholder="Your name">
       <input type="email" name="_replyto" placeholder="Your email">
       <input type="hidden" name="_subject" value="TuBioinfostudio contact" />
-      <textarea name="body" placeholder="If you want to leave us a message, please send it here!"></textarea>
+      <textarea name="body" placeholder="Your message"></textarea>
       <input type="text" name="_gotcha" style="display:none" />
       <input type="submit" value="Send">
     </form>
