--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </tr>
                 <tr>
                     <td>10/18/19</td>
-                    <td>Open Coding Session</td>
+                    <td>Penn Biomedical Informatics http://upibi.org/</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
@@ -398,6 +398,60 @@
               </li>
               <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/adam-karami-69167195/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/hk.png" alt="">
+            <h4>Hannah Kim</h4>
+            <p class="text-muted">Webmaster</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://github.com/hannahkimincompbio/">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/hannahkimincompbio/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/nm.JPG" alt="">
+            <h4>Noreen McBrearty</h4>
+            <p class="text-muted">Event Manager</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/noreen-mcbrearty/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/gn.jpeg" alt="">
+            <h4>Gavin Newcomer</h4>
+            <p class="text-muted">University Relations Manager</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://github.com/gavinnewcomer/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/gavinnewcomer/">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
               </li>
