--- a/index.html
+++ b/index.html
@@ -404,6 +404,8 @@
             </ul>
           </div>
         </div>
+      </div>
+      <div class = "row">
         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/hk.png" alt="">
@@ -447,7 +449,7 @@
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://github.com/gavinnewcomer/">
-                  <i class="fab fa-linkedin-in"></i>
+                  <i class="fab fa-github"></i>
                 </a>
               </li>
               <li class="list-inline-item">
