--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
       <div class = "row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/hk.png" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/hk.PNG" alt="">
             <h4>Hannah Kim</h4>
             <p class="text-muted">Webmaster</p>
             <ul class="list-inline social-buttons">
