more detail on the speaker

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </tr>
                 <tr>
                     <td>10/18/19</td>
-                    <td>Penn Biomedical Informatics http://upibi.org/</td>
+                    <td>Dr. William La Cava, Penn IBI</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
