--- a/index.html
+++ b/index.html
@@ -470,12 +470,12 @@
         </div>
       </div>
       <div class="row">
-          <div class="col-sm-4 text-center"></div>
+        <div class="col-sm-4 text-center"></div>
         <div class="col-sm-4 text-center">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/rk.jpg" alt="">
             <h4>Rob Kulathinal</h4>
-            <p class="text-muted">robkulathinal@temple.edu</p>
+            <p class="text-muted">robkulathinal AT temple.edu</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://www.cst.temple.edu/~robie/bioinform/index.html">
@@ -490,6 +490,26 @@
             </ul>
           </div>
         </div>
+        <div class="col-sm-4 text-center">
+          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/vc.jpg" alt="">
+            <h4>Vincenzo Carnevale</h4>
+            <p class="text-muted">vincenzo.carnevale AT temple.edu</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://vincenzocarnevale.wordpress.com/">
+                  <i class="fab fa-hubspot"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/vincenzocarnevale/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
