center2 + minor update

--- a/index.html
+++ b/index.html
@@ -466,11 +466,11 @@
       </div>
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Faculty Advisor</h2>
+          <h2 class="section-heading text-uppercase">Faculty Advisors</h2>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4 text-center">
+        <div class="col-sm-6 text-center">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/rk.jpg" alt="">
             <h4>Rob Kulathinal</h4>
@@ -489,7 +489,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-sm-4 text-center">
+        <div class="col-sm-6 text-center">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/vc.jpg" alt="">
             <h4>Vincenzo Carnevale</h4>
