--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/jz.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/jz.jpeg" alt="">
             <h4>Jordan Zehr</h4>
             <p class="text-muted">Project Manager</p>
             <ul class="list-inline social-buttons">
