--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                 </tr>
                 <tr>
                     <td>11/1/19</td>
-                    <td>Happy Halloween!</td>
-                    <td>5-6PM</td>
+                    <td>Dr. Jocelyn Behm on Conservation Ecology + R demo</td>
+                    <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>11/8/19</td>
