--- a/index.html
+++ b/index.html
@@ -201,22 +201,22 @@
                 </tr>
                 <tr>
                     <td>10/18/19</td>
-                    <td>Dr. William La Cava, Penn IBI</td>
+                    <td>Dr. William La Cava (Penn IBI)</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>10/25/19</td>
-                    <td>Open Coding Session</td>
+                    <td></td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>11/1/19</td>
-                    <td>Dr. Jocelyn Behm on Conservation Ecology in R</td>
+                    <td>Dr. Jocelyn Behm (Temple) on Species Declines in R</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
                     <td>11/8/19</td>
-                    <td>Open Coding Session</td>
+                    <td>Dr. JD Grattepanche (Temple) on Metatranscriptomics</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
