--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </tr>
                 <tr>
                     <td>10/25/19</td>
-                    <td></td>
+                    <td>Dr. JD Grattepanche (Temple) on Metatranscriptomics</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
@@ -216,7 +216,7 @@
                 </tr>
                 <tr>
                     <td>11/8/19</td>
-                    <td>Dr. JD Grattepanche (Temple) on Metatranscriptomics</td>
+                    <td>Open Coding Session</td>
                     <td>5-7PM</td>
                 </tr>
                 <tr>
