--- a/index.html
+++ b/index.html
@@ -157,122 +157,124 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-12">
-            <table style='float: left;'>
-                <tr>
-                  <th>Date</th>
-                  <th>Speaker/Tutorial</th> 
-                  <th>Time</th>
-                </tr>
-                <tr>
-                  <td>8/28/19</td>
-                  <td>Welcome Session! Pizza will be supplied! </td> 
-                  <td>5-6PM</td>
-                </tr>
-                <tr>
-                  <td>9/4/19</td>
-                  <td> Github Tutorial </td>
-                  <td>5-6PM</td>
-                </tr>
-                <tr>
-                    <td>9/13/19</td>
-                    <td> Open Coding Session </td>
-                    <td>5-6PM</td>
-                </tr>
-                <tr>
-                    <td>9/20/19</td>
-                    <td>Open Coding Session</td>
-                    <td>5-7PM</td>
-                </tr>
-                <tr>
-                    <td>9/27/19</td>
-                    <td>Open Coding Session </td>
-                    <td>5-7PM</td>
-                </tr>
-                <tr>
-                    <td>10/4/19</td>
-                    <td>Open Coding Session </td>
-                    <td>5-7PM</td>
-                </tr>
-                <tr>
-                    <td>10/11/19</td>
-                    <td>Sentieon on Precision Medicine Variant Calling</td>
-                    <td>5-7PM</td>
-                </tr>
-                <tr>
-                    <td>10/18/19</td>
-                    <td>Dr. William La Cava (Penn IBI)</td>
-                    <td>5-7PM</td>
-                </tr>
-                <tr>
-                    <td>10/25/19</td>
-                    <td>Dr. JD Grattepanche (Temple) on Metatranscriptomics</td>
-                    <td>5-7PM</td>
-                </tr>
-                <tr>
-                    <td>11/1/19</td>
-                    <td>Dr. Jocelyn Behm (Temple) on Species Declines in R</td>
-                    <td>5-7PM</td>
-                </tr>
-                <tr>
-                    <td>11/8/19</td>
-                    <td>Open Coding Session</td>
-                    <td>5-7PM</td>
-                </tr>
-                <tr>
-                    <td>11/15/19</td>
-                    <td>Open Coding Session</td>
-                    <td>5-7PM</td>
-                </tr>
-                <tr>
-                    <td>11/22/19</td>
-                    <td>Open Coding Session</td>
-                    <td>5-7PM</td>
-                </tr>
-                <tr>
-                    <td>11/29/19</td>
-                    <td>No session!  Happy Thanksgiving!</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>12/6/19</td>
-                    <td>Last Session! Pizza will be supplied!</td>
-                    <td>5-6PM</td>
-                </tr>
+        <div class="col-lg-9">
+          <table style='float: left;'>
+            <tr>
+              <th>Date</th>
+              <th>Speaker/Tutorial</th> 
+              <th>Time</th>
+            </tr>
+            <tr>
+              <td>8/28/19</td>
+              <td>Welcome Session! Pizza will be supplied! </td> 
+              <td>5-6PM</td>
+            </tr>
+            <tr>
+              <td>9/4/19</td>
+              <td> Github Tutorial </td>
+              <td>5-6PM</td>
+            </tr>
+            <tr>
+              <td>9/13/19</td>
+              <td> Open Coding Session </td>
+              <td>5-6PM</td>
+            </tr>
+            <tr>
+              <td>9/20/19</td>
+              <td>Open Coding Session</td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>9/27/19</td>
+              <td>Open Coding Session </td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>10/4/19</td>
+              <td>Open Coding Session </td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>10/11/19</td>
+              <td>Sentieon on Precision Medicine Variant Calling</td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>10/18/19</td>
+              <td>Dr. William La Cava (Penn IBI)</td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>10/25/19</td>
+              <td>Dr. JD Grattepanche (Temple) on Metatranscriptomics</td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>11/1/19</td>
+              <td>Dr. Jocelyn Behm (Temple) on Species Declines in R</td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>11/8/19</td>
+              <td>Open Coding Session</td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>11/15/19</td>
+              <td>Open Coding Session</td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>11/22/19</td>
+              <td>Open Coding Session</td>
+              <td>5-7PM</td>
+            </tr>
+            <tr>
+              <td>11/29/19</td>
+              <td>No session!  Happy Thanksgiving!</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>12/6/19</td>
+              <td>Last Session! Pizza will be supplied!</td>
+              <td>5-6PM</td>
+            </tr>
             </table>
-            <table style = 'float: left;'>
-              <tr>
-                <th>Available Tutorials</th>
-              </tr>
-              <tr>
-                <td>Studio Bootstrap</td>
-              </tr>
-              <tr>
-                <td>Intro to Python: Variable Types</td>
-              </tr>
-              <tr>
-                <td>Intro to Python: Loops & Conditional Statements</td>
-              </tr>
-              <tr>
-                <td>PANDAS Introduction</td>
-              </tr>
-              <tr>
-                <td>Graphing: Matplotlib and Seaborn</td>
-              </tr>
-              <tr>
-                <td>Intro to Python: Variable Types</td>
-              </tr>
-              <tr>
-                <td>Input/Output</td>
-              </tr>
-              <tr>
-                <td>Introduction to Functions</td>
-              </tr>
-              <tr>
-                <td>Introduction to Libraries</td>
-              </tr>
-            </table>
-            <a class="btn btn-primary btn-lg text-uppercase" href="https://drive.google.com/drive/u/1/folders/0AB9vccD6QEfPUk9PVA">Google Drive</a>
+        </div>  
+        <div class="col-lg-3">
+          <table style = 'float: left;'>
+            <tr>
+              <th>Available Tutorials</th>
+            </tr>
+            <tr>
+              <td>Studio Bootstrap</td>
+            </tr>
+            <tr>
+              <td>Intro to Python: Variable Types</td>
+            </tr>
+            <tr>
+              <td>Intro to Python: Loops & Conditional Statements</td>
+            </tr>
+            <tr>
+              <td>PANDAS Introduction</td>
+            </tr>
+            <tr>
+              <td>Graphing: Matplotlib and Seaborn</td>
+            </tr>
+            <tr>
+              <td>Intro to Python: Variable Types</td>
+            </tr>
+            <tr>
+              <td>Input/Output</td>
+            </tr>
+            <tr>
+              <td>Introduction to Functions</td>
+            </tr>
+            <tr>
+              <td>Introduction to Libraries</td>
+            </tr>
+          </table>
+          <a class="btn btn-primary btn-lg text-uppercase" href="https://drive.google.com/drive/u/1/folders/0AB9vccD6QEfPUk9PVA">Google Drive</a>
         </div>
       </div>
     </div>
