--- a/index.html
+++ b/index.html
@@ -157,91 +157,91 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-6">
           <table style='float: left;'>
             <tr>
-              <th>Date</th>
-              <th>Speaker/Tutorial</th> 
-              <th>Time</th>
+              <th class="col-md-1">Date</th>
+              <th class="col-md-4">Speaker/Tutorial</th> 
+              <th class="col-md-1">Time</th>
             </tr>
             <tr>
-              <td>8/28/19</td>
-              <td>Welcome Session! Pizza will be supplied! </td> 
-              <td>5-6PM</td>
+              <td class="col-md-1">8/28/19</td>
+              <td class="col-md-4">Welcome Session! Pizza will be supplied! </td> 
+              <td class="col-md-1">5-6PM</td>
             </tr>
             <tr>
-              <td>9/4/19</td>
-              <td> Github Tutorial </td>
-              <td>5-6PM</td>
+              <td class="col-md-1">9/4/19</td>
+              <td class="col-md-4"> Github Tutorial </td>
+              <td class="col-md-1">5-6PM</td>
             </tr>
             <tr>
-              <td>9/13/19</td>
-              <td> Open Coding Session </td>
-              <td>5-6PM</td>
+              <td class="col-md-1">9/13/19</td>
+              <td class="col-md-4"> Open Coding Session </td>
+              <td class="col-md-1">5-6PM</td>
             </tr>
             <tr>
-              <td>9/20/19</td>
-              <td>Open Coding Session</td>
-              <td>5-7PM</td>
+              <td class="col-md-1">9/20/19</td>
+              <td class="col-md-4">Open Coding Session</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td>9/27/19</td>
-              <td>Open Coding Session </td>
-              <td>5-7PM</td>
+              <td class="col-md-1">9/27/19</td>
+              <td class="col-md-4">Open Coding Session </td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td>10/4/19</td>
-              <td>Open Coding Session </td>
-              <td>5-7PM</td>
+              <td class="col-md-1">10/4/19</td>
+              <td class="col-md-4">Open Coding Session </td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td>10/11/19</td>
-              <td>Sentieon on Precision Medicine Variant Calling</td>
-              <td>5-7PM</td>
+              <td class="col-md-1">10/11/19</td>
+              <td class="col-md-4">Sentieon on Precision Medicine Variant Calling</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td>10/18/19</td>
-              <td>Dr. William La Cava (Penn IBI)</td>
-              <td>5-7PM</td>
+              <td class="col-md-1">10/18/19</td>
+              <td class="col-md-4">Dr. William La Cava (Penn IBI)</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td>10/25/19</td>
-              <td>Dr. JD Grattepanche (Temple) on Metatranscriptomics</td>
-              <td>5-7PM</td>
+              <td class="col-md-1">10/25/19</td>
+              <td class="col-md-4">Dr. JD Grattepanche (Temple) on Metatranscriptomics</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td>11/1/19</td>
-              <td>Dr. Jocelyn Behm (Temple) on Species Declines in R</td>
-              <td>5-7PM</td>
+              <td class="col-md-1">11/1/19</td>
+              <td class="col-md-4">Dr. Jocelyn Behm (Temple) on Species Declines in R</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td>11/8/19</td>
-              <td>Open Coding Session</td>
-              <td>5-7PM</td>
+              <td class="col-md-1">11/8/19</td>
+              <td class="col-md-4">Open Coding Session</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td>11/15/19</td>
-              <td>Open Coding Session</td>
-              <td>5-7PM</td>
+              <td class="col-md-1">11/15/19</td>
+              <td class="col-md-4">Open Coding Session</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td>11/22/19</td>
-              <td>Open Coding Session</td>
-              <td>5-7PM</td>
+              <td class="col-md-1">11/22/19</td>
+              <td class="col-md-4">Open Coding Session</td>
+              <td class="col-md-1">5-7PM</td>
             </tr>
             <tr>
-              <td>11/29/19</td>
-              <td>No session!  Happy Thanksgiving!</td>
-              <td></td>
+              <td class="col-md-1">11/29/19</td>
+              <td class="col-md-4">No session!  Happy Thanksgiving!</td>
+              <td class="col-md-1"></td>
             </tr>
             <tr>
-              <td>12/6/19</td>
-              <td>Last Session! Pizza will be supplied!</td>
-              <td>5-6PM</td>
+              <td class="col-md-1">12/6/19</td>
+              <td class="col-md-4">Last Session! Pizza will be supplied!</td>
+              <td class="col-md-1">5-6PM</td>
             </tr>
             </table>
         </div>  
-        <div class="col-xs-6">
+        <div class="col-xs-4">
           <table style = 'float: left;'>
             <tr>
               <th>Available Tutorials</th>
