--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-6">
+        <div class="col-lg-6">
           <table style='float: left;'>
             <tr>
               <th class="col-md-1">Date</th>
@@ -241,7 +241,7 @@
             </tr>
             </table>
         </div>  
-        <div class="col-xs-4">
+        <div class="col-lg-4">
           <table style = 'float: left;'>
             <tr>
               <th>Available Tutorials</th>
